changes pom to 1.8